--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "2.12.0",
 	"description": "The open source modular smart mirror platform.",
 	"main": "js/electron.js",
+	"engines" : { "node" : ">=0.10.3 <0.12" },
 	"scripts": {
 		"start": "DISPLAY=\"${DISPLAY:=:0}\" ./node_modules/.bin/electron js/electron.js",
 		"server": "node ./serveronly",
